# Build ? Release ?
1. New Property (From 5.x snippets): Prop_IceBox (thx Robert!)
2. CharStats can now be customized with ADDCHARSTAT_ in coffeemud.ini file.
3. New Commands (From 4.x snippets): Experience, Wealth (thx again Robert)
4. RawMaterial can now be customized with ADDMATERIAL_ in coffeemud.ini file.
5. Wearable can now be customized with ADDWEARLOC_ in coffeemud.ini file.
6. Only Artisan's learn the Master common skills now.  Other classes have their common skill levels lowered.
7. New language: Sign Language
8. New ZapperMask(s): -CHANCE
9. New Property(s): PresenceReaction (for new faction reaction system, etc.)
10.New Mage Spell: Awe Other
11.Factions now have new mob modification system similar to affects/behaviors: reactions
11.New automated MOB reaction system -- see coffeemud.ini under REACTION, and the guide under FACTIONS for more info.
12.Factions now have lots of new triggers: KILL, BRIBE, TALK, MUDCHAT, ARRESTED
13.Faction triggers support parameters; see one of the new faction.ini files for details
14.New Prayer for Healers: Divine Constitution
15.STAT commands now supports: FACTIONS, ROOMSEXPLORED, AREASEXPLORED, WORLDEXPLORED
16.PROMPT now supports new codes to display all manner of personal variables.
17.Abilities/GenAbilities now support delays between allowed invocations
18.New Thief Skill: Turf War!
19.Run-time compiled java from LOAD command will now display any compile errors to user.
20.Socials now support various item-type target options.
21.New Multi-Character account system -- see COMMONACCOUNTSYSTEM in ini file.
 a.Can now LIST ACCOUNTS
 b.For transition muds: char selection IMPORT command lets players import their old chars to new accounts.
 c.EXPIRATION system works with accounts, when common account system is enabled. 
22.New command: LOGOUT/LOGOFF -- exits back to login prompt/char selection
23.New INI entry: EXVIEW, for selecting types of exit views for the players
