@@ -2250,4 +2250,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
  c.EXPIRATION system works with accounts, when common account system is enabled. 
 22.New command: LOGOUT/LOGOFF -- exits back to login prompt/char selection
 23.New INI entry: EXVIEW, for selecting types of exit views for the players
+24.XP Bonuses for killing HL targets will only apply if player/mob close to highest level players level.
 
